--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Brad Traversy - BA",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "express": "^4.18.2",
